# career-copilot-cn

./: .gitignore  DEV_PLAN.md  README.md  docker-compose.yml  push-to-github.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_prototype/api/: auth_deps.py  config.py  main.py  pyproject.toml
_prototype/web/: next.config.js  package.json
apps/api/: .env.example  Dockerfile  auth_deps.py  config.py  database.py  main.py  pyproject.toml
apps/api/ai/: __init__.py
apps/api/models/: __init__.py
apps/api/routers/: artifacts.py  auth.py  core.py  events.py  jobs.py  profile.py  sources.py  vault.py  vault_events.py  vault_sources.py
apps/api/services/: ai_worker.py  evidence_mapper.py  file_reader.py  ingestion.py  llm_providers.py  message_delivery.py  parse_prompts.py  passwords.py  profile_schema.py  prompts.py  source_parse.py  tokens.py  vault_event_patches.py  vault_pipeline.py  vault_pipeline_keys.py  vault_pipeline_prompts.py  vault_pipeline_types.py  vault_section_schema.py  verification_codes.py
apps/api/tasks/: parse_worker.py
apps/api/tests/: test_ai_worker.py  test_auth.py  test_database_migrations.py  test_ingestion.py  test_llm_providers.py  test_parse_prompts.py  test_profile_schema.py  test_profile_settings.py  test_source_parse.py  test_vault_event_patches.py  test_vault_events.py  test_vault_pipeline.py  test_vault_pipeline_keys.py  test_vault_pipeline_prompts.py  test_vault_section_schema.py  test_vault_sources.py
apps/web/: package-lock.json  (+2 more)
docs/: 2026-06-30-page-audit-and-dev-plan.md
(+80 files in other folders)
